[gd_scene load_steps=8 format=3 uid="uid://cel1520yhe5y1"]

[ext_resource type="Script" path="res://scenes/ui/wishlist_counter.gd" id="1_8sy5o"]
[ext_resource type="Texture2D" uid="uid://bj5c2ynvrbssr" path="res://assets/graphics/items/triangle.png" id="1_x34mx"]
[ext_resource type="Texture2D" uid="uid://65b8wt87apoe" path="res://assets/graphics/items/rectangle.png" id="2_1lj0x"]
[ext_resource type="Texture2D" uid="uid://dfn1rf4404pgq" path="res://assets/graphics/regular-list-check.png" id="2_om2oy"]
[ext_resource type="Texture2D" uid="uid://cj2l2a6sr6d3a" path="res://assets/graphics/items/circle.png" id="3_7nljy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l3il"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qhv7l"]

[node name="WishlistCounter" type="MarginContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -193.0
offset_top = -41.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_8sy5o")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0l3il")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Icon" type="TextureRect" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 16)
layout_mode = 2
texture = ExtResource("2_om2oy")
expand_mode = 1
stretch_mode = 5

[node name="Separator" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qhv7l")

[node name="TriangleContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/TriangleContainer"]
layout_mode = 2
texture = ExtResource("1_x34mx")
stretch_mode = 3

[node name="TriangleLabel" type="Label" parent="PanelContainer/HBoxContainer/TriangleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="RectangleContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/RectangleContainer"]
layout_mode = 2
texture = ExtResource("2_1lj0x")
stretch_mode = 3

[node name="RectangleLabel" type="Label" parent="PanelContainer/HBoxContainer/RectangleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="CircleContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/CircleContainer"]
layout_mode = 2
texture = ExtResource("3_7nljy")
stretch_mode = 3

[node name="CircleLabel" type="Label" parent="PanelContainer/HBoxContainer/CircleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
